--- a/index.html
+++ b/index.html
@@ -354,37 +354,7 @@
         </section>
 
         <!-- Stats Counter Script -->
-        <script>
-            document.addEventListener("DOMContentLoaded", () => {
-                const counters = document.querySelectorAll('.counter');
-
-                counters.forEach(counter => {
-                    const target = +counter.getAttribute('data-target');
-                    const prefix = counter.getAttribute('data-prefix') || "";
-                    const suffix = counter.getAttribute('data-suffix') || "";
-                    const duration = 3000; // 3 seconds
-                    const increment = target / (duration / 16); // 60fps approx
-
-                    let current = 0;
-
-                    const updateCounter = () => {
-                        current += increment;
-
-                        if (current < target) {
-                            // Format number with commas for thousands
-                            const formatted = Math.ceil(current).toLocaleString();
-                            counter.innerText = `${prefix}${formatted}${suffix}`;
-                            requestAnimationFrame(updateCounter);
-                        } else {
-                            // Ensure final value is exact
-                            counter.innerText = `${prefix}${target.toLocaleString()}${suffix}`;
-                        }
-                    };
-
-                    updateCounter();
-                });
-            });
-        </script>
+        <!-- Stats Counter Logic moved to script.js -->
 
 
 
@@ -679,19 +649,7 @@
                 </div>
 
                 <!-- Tabs Script -->
-                <script>
-                    document.querySelectorAll('.tab-btn').forEach(button => {
-                        button.addEventListener('mouseover', () => {
-                            // Remove active class from all
-                            document.querySelectorAll('.tab-btn').forEach(btn => btn.classList.remove('active'));
-                            document.querySelectorAll('.tab-content').forEach(content => content.classList.remove('active'));
-
-                            // Add active class to hovered
-                            button.classList.add('active');
-                            document.getElementById(button.dataset.tab).classList.add('active');
-                        });
-                    });
-                </script>
+                <!-- Tabs Logic moved to script.js -->
             </div>
         </section>
 
@@ -1555,108 +1513,7 @@
         }
     </style>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const ticketModal = document.getElementById('goldenTicketModal');
-            const navTicketItem = document.getElementById('navTicketItem');
-            const openNavBtnDesktop = document.getElementById('openNavTicketDesktop');
-            const openNavBtnMobile = document.getElementById('openNavTicket');
-            const closeBtn = document.getElementById('closeTicket');
-            const nameInput = document.getElementById('ticketVisitorName');
-            const folioSpan = document.getElementById('ticketFolio');
-            const claimBtn = document.getElementById('claimTicketBtn');
-            const referralSelect = document.getElementById('referralSource');
-
-            let currentFolio = "";
-            let ticketShown = false;
-
-            // Unique Code Generator with Date and Sequential Counter
-            function generateUniqueCode(source) {
-                // Get current date in DDMMYY format
-                const now = new Date();
-                const day = String(now.getDate()).padStart(2, '0');
-                const month = String(now.getMonth() + 1).padStart(2, '0');
-                const year = String(now.getFullYear()).slice(-2);
-                const dateStr = `${day}${month}${year}`;
-
-                // Get and increment global sequential counter (starts at 5000)
-                let counter = parseInt(localStorage.getItem('ticketCounter') || '5000', 10);
-                counter += 1;
-                localStorage.setItem('ticketCounter', counter.toString());
-
-                // Format counter as 4-digit number with leading zeros
-                const counterStr = String(counter).padStart(4, '0');
-
-                return `${source}-${dateStr}-${counterStr}`;
-            }
-
-            // Show nav button after 1 second OR on scroll
-            function triggerTicketEntry() {
-                if (ticketShown) return;
-                ticketShown = true;
-                navTicketItem.classList.add('visible');
-            }
-
-            setTimeout(triggerTicketEntry, 1000);
-            window.addEventListener('scroll', triggerTicketEntry);
-
-            function openTicket() {
-                // Generate new code each time modal opens
-                const selectedSource = referralSelect.value;
-                currentFolio = generateUniqueCode(selectedSource);
-                folioSpan.textContent = currentFolio;
-
-                ticketModal.classList.remove('hidden');
-                setTimeout(() => ticketModal.classList.add('visible'), 10);
-            }
-
-            // Update code when referral source changes
-            referralSelect.addEventListener('change', () => {
-                const selectedSource = referralSelect.value;
-                currentFolio = generateUniqueCode(selectedSource);
-                folioSpan.textContent = currentFolio;
-            });
-
-            // Add event listeners for both desktop and mobile buttons
-            if (openNavBtnDesktop) {
-                openNavBtnDesktop.addEventListener('click', openTicket);
-            }
-            if (openNavBtnMobile) {
-                openNavBtnMobile.addEventListener('click', openTicket);
-            }
-
-            closeBtn.addEventListener('click', () => {
-                ticketModal.classList.remove('visible');
-                setTimeout(() => {
-                    ticketModal.classList.add('hidden');
-                }, 500);
-            });
-
-            claimBtn.addEventListener('click', (e) => {
-                const userName = nameInput.value.trim();
-                if (userName.length < 2) {
-                    e.preventDefault();
-                    nameInput.style.borderColor = "#ef4444";
-                    nameInput.placeholder = "Escribe tu nombre";
-                    return;
-                }
-
-                sessionStorage.setItem('ticketClaimed', 'true');
-                if (navTicketItem) navTicketItem.classList.remove('visible');
-
-                // Updated message with unique code
-                const finalMsg = `Hola, soy *${userName}*. He generado mi *BOLETO DORADO* en GestorDeAutos.
-Código Único: *${currentFolio}*
-Me gustaría solicitar una cotización lo mas pronto posible.`;
-                const waUrl = `https://wa.me/525535757364?text=${encodeURIComponent(finalMsg)}`;
-
-                window.open(waUrl, '_blank');
-
-                ticketModal.classList.remove('visible');
-                setTimeout(() => ticketModal.classList.add('hidden'), 500);
-            });
-        });
-    </script>
+    <!-- Golden Ticket Logic moved to script.js -->
 
     <!-- Footer -->
     <footer id="contacto" class="footer">
@@ -1697,272 +1554,19 @@ Me gustaría solicitar una cotización lo mas pronto posible.`;
 
 
     <!-- Scroll Effect Script -->
-    <script>
-        window.addEventListener('scroll', function () {
-            const header = document.querySelector('.header');
-            if (window.scrollY > 50) {
-                header.classList.add('scrolled');
-            } else {
-                header.classList.remove('scrolled');
-            }
-        });
-    </script>
+    <!-- Scroll Logic moved to script.js -->
 
     <!-- Reviews Navigation Script -->
-    <script>
-        function scrollReviews(direction) {
-            const track = document.getElementById('reviewsTrack');
-            const cardWidth = 350 + 24; // card width + gap
-            const scrollAmount = direction === 'prev' ? -cardWidth : cardWidth;
-
-            track.scrollBy({
-                left: scrollAmount,
-                behavior: 'smooth'
-            });
-        }
-    </script>
+    <!-- Reviews Nav Logic moved to script.js -->
 
 
     <!-- Cover Flow Effect Script (Apple-style Physics) -->
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const track = document.querySelector('.reviews-track');
-            const cards = document.querySelectorAll('.review-card');
+    <!-- Cover Flow Logic moved to script.js -->
+    <!-- Translations Logic moved to script.js -->
 
 
-            // Physics State
-            let currentScroll = track.scrollLeft;
-            let targetScroll = track.scrollLeft;
-            let isDragging = false;
-
-            // Lerp factor (Lower = Smoother/Heavier, Higher = Snappier)
-            // 0.08 is a sweet spot for "Apple-like" fluid weight
-            const lerpFactor = 0.08;
-
-            function lerp(start, end, factor) {
-                return start + (end - start) * factor;
-            }
-
-            function updateCoverFlow() {
-                // Smooth out the scroll value
-                targetScroll = track.scrollLeft;
-
-                // If the difference is small enough, snap to target to save CPU
-                if (Math.abs(targetScroll - currentScroll) < 0.5) {
-                    currentScroll = targetScroll;
-                } else {
-                    currentScroll = lerp(currentScroll, targetScroll, lerpFactor);
-                }
-
-                // Calculate center based on SMOOTHED scroll
-                const center = currentScroll + (track.offsetWidth / 2);
-
-                cards.forEach(card => {
-                    const cardCenter = card.offsetLeft + (card.offsetWidth / 2);
-                    const distance = Math.abs(center - cardCenter);
-                    const maxDistance = 500; // Increased range for softer falloff
-
-                    // Reset classes
-                    card.classList.remove('active', 'prev', 'next');
-                    card.style.zIndex = Math.round(1000 - distance); // Ultra-precise z-indexing
-
-                    // Normalized distance (0 to 1)
-                    let normDist = Math.min(1, distance / maxDistance);
-
-                    // Smooth easing functions for properties
-                    // Quadratic ease-in for scale (1 -> 0.85)
-                    const scale = 1.15 - (normDist * 0.35); // 1.15 center -> 0.8 sides
-
-                    // Sinusoidal ease for Rotation
-                    // Slightly S-curve for smoother start/end of rotation
-                    const rotRaw = normDist * 45; // Max 45deg
-
-                    // Translation X (The "Magnetic" pull)
-                    // REMOVED shift to keep them physically separated as per request
-                    const shift = 0;
-
-                    // Depth
-                    // Reduced from -150 to -70 to bring them "just behind" the active card
-                    const depth = -70 * normDist;
-
-                    if (distance < 50) { // Center "Sweet spot"
-                        card.classList.add('active');
-                        // Pure front-facing
-                        card.style.transform = `translateX(0px) scale(1.15) translateZ(100px) rotateY(0deg)`;
-                    } else {
-                        // Side cards
-                        if (cardCenter < center) {
-                            card.classList.add('prev');
-                            card.style.transform = `translateX(${shift}px) scale(${scale}) translateZ(${depth}px) rotateY(${rotRaw}deg)`;
-                        } else {
-                            card.classList.add('next');
-                            card.style.transform = `translateX(${shift}px) scale(${scale}) translateZ(${depth}px) rotateY(-${rotRaw}deg)`;
-                        }
-
-                        // Smooth opacity fade
-                        card.style.opacity = 1 - (normDist * 0.6); // Fade out as they go back
-                    }
-                });
-
-                // Infinite loop for physics
-                window.requestAnimationFrame(updateCoverFlow);
-            }
-
-            // Kick off the loop
-            updateCoverFlow();
-        });
-    </script>
-    <script>
-        const translations = {
-            es: {
-                // Nav
-                nav_services: "Servicios",
-                nav_contact: "Contacto",
-                btn_quote: '<i class="fab fa-whatsapp"></i> Cotizar Ahora',
-
-                // Header
-                header_slogan: "Gestión vehicular rápida y segura.",
-
-                // Hero
-                hero_title_main: "Gestoría Vehicular en Estado de México y CDMX",
-                hero_title_sub: "Chalco · Ixtapaluca · Huixquilucan · Interlomas",
-                hero_desc_bold: "¿Moto o Auto nuevos?",
-                hero_desc_text: "Somos expertos en alta de placas, licencias, legalización y cambios de propietario en EdoMex, CDMX y todo México. ¡Trámites 100% online!",
-                btn_view_services: "Ver Servicios",
-                trust_title: "¿Por qué elegirnos?",
-                trust_subtitle: "Más de 5 años simplificando la vida de los conductores mexicanos.",
-                text_stat_1: "Trámites Exitosos",
-                text_stat_2: "Clientes Satisfechos",
-                text_stat_3: "Tiempo Promedio de Respuesta",
-
-                // Services
-                services_title: "Nuestros Servicios",
-                services_subtitle: "Gestión especializada en CDMX, Estado de México, Morelos, Guerrero, Michoacán y Oaxaca.",
-
-                // Tabs
-                tab_control: "Placas & Trámites",
-                tab_licenses: "Licencias",
-                tab_foreigners: "Extranjeros / Foreigners",
-                tab_others: "Legalizaciones y REPUVE",
-
-                // Foreigner Svc
-                svc_foreign_lic_title: "Licencia para Extranjeros",
-                svc_foreign_lic_sub: "Licencia de conducir para extranjeros",
-                svc_foreign_lic_desc: "Tramitamos tu licencia de conducir mexicana con tu pasaporte o forma migratoria. Proceso 100% legal y seguro.",
-                svc_foreign_plates_title: "Placas para Extranjeros",
-                svc_foreign_plates_sub: "Registro de placas",
-                svc_legalization_title: "Legalización de Autos",
-                svc_legalization_sub: "Regularización de extranjeros",
-            },
-            en: {
-                // Nav
-                nav_services: "Services",
-                nav_contact: "Contact",
-                btn_quote: '<i class="fab fa-whatsapp"></i> Get Quote',
-
-                // Header
-                header_slogan: "Fast and secure vehicle registration.",
-
-                // Hero
-                hero_title_main: "Vehicle Registration Services CDMX & EdoMex",
-                hero_title_sub: "Chalco · Ixtapaluca · Huixquilucan · Interlomas",
-                hero_desc_bold: "New Car or Moto?",
-                hero_desc_text: "Registration, legalization, and ownership transfer in the Metropolitan Area and all of Mexico. 100% online procedures.",
-                btn_view_services: "View Services",
-                trust_title: "Why Choose Us?",
-                trust_subtitle: "Over 5 years simplifying life for drivers in Mexico.",
-                text_stat_1: "Successful Procedures",
-                text_stat_2: "Satisfied Clients",
-                text_stat_3: "Average Response Time",
-
-                // Services
-                services_title: "Our Services",
-                services_subtitle: "Specialized management in CDMX, State of Mexico, Morelos, Guerrero, Michoacán, and Oaxaca.",
-
-                // Tabs
-                tab_control: "Plates & Procedures",
-                tab_licenses: "Licenses",
-                tab_foreigners: "Foreigners Services",
-                tab_others: "Legalization & REPUVE",
-
-                // Foreigner Svc
-                svc_foreign_lic_title: "Driver's License for Foreigners",
-                svc_foreign_lic_sub: "Valid Mexican Driver's License",
-                svc_foreign_lic_desc: "We process your Mexican driver's license using your passport or immigration form. 100% legal and secure process.",
-                svc_foreign_plates_title: "License Plates for Foreigners",
-                svc_foreign_plates_sub: "Vehicle Registration",
-                svc_legalization_title: "Car Legalization",
-                svc_legalization_sub: "Foreign car regularization",
-            }
-        };
-
-        const langToggle = document.getElementById('langToggle');
-        let currentLang = 'es';
-
-        // Auto-detect language
-        const userLang = navigator.language || navigator.userLanguage;
-        if (userLang.startsWith('en')) {
-            currentLang = 'en';
-        }
-
-        function updateLanguage(lang) {
-            currentLang = lang;
-            langToggle.textContent = lang === 'es' ? 'EN' : 'ES'; // Show the OTHER option to switch to, or current? Standard is showing current or flag. Let's show current code.
-            // Actually, better UX: Show what you WILL switch to? Or what IS?
-            // "EN" usually means "Switch to English". "ES" means "Switch to Spanish".
-            // If current is ES, button says EN.
-            langToggle.textContent = lang === 'es' ? 'EN' : 'ES';
-
-            document.querySelectorAll('[data-i18n]').forEach(element => {
-                const key = element.getAttribute('data-i18n');
-                if (translations[lang][key]) {
-                    if (element.tagName === 'A' && element.classList.contains('btn-whatsapp')) {
-                        // Preserve icon for buttons if html is needed
-                        element.innerHTML = translations[lang][key];
-                    } else {
-                        element.textContent = translations[lang][key];
-                    }
-                }
-            });
-        }
-
-        langToggle.addEventListener('click', () => {
-            const newLang = currentLang === 'es' ? 'en' : 'es';
-            updateLanguage(newLang);
-        });
-
-        // Initialize
-        // If we want to auto-switch on load:
-        if (currentLang === 'en') {
-            updateLanguage('en');
-        } else {
-            // Default text is already Spanish HTML, but running this ensures consistency if we change defaults
-            langToggle.textContent = 'EN';
-        }
-
-    </script>
-    <!-- Number Animation Script -->
-
-    <script>
-        // Fox Bubble Interaction
-        document.addEventListener('DOMContentLoaded', () => {
-            const foxTrigger = document.querySelector('.features-fox');
-            const foxBubble = document.getElementById('foxBubble');
-
-            if (foxTrigger && foxBubble) {
-                const observer = new IntersectionObserver((entries) => {
-                    entries.forEach(entry => {
-                        if (entry.isIntersecting) {
-                            foxBubble.classList.add('visible');
-                        }
-                    });
-                }, { threshold: 0.3 });
-
-                observer.observe(foxTrigger);
-            }
-        });
-    </script>
-    <script src="script.js"></script>
+    <!-- Fox Bubble Logic moved to script.js -->
+    <script src="script.js" defer></script>
 </body>
 
 </html>
