--- a/aviso-privacidad.html
+++ b/aviso-privacidad.html
@@ -329,9 +329,12 @@
             </div>
 
             <div class="cp-body">
-                <p>
+                <div style="text-align: right; margin-bottom: 1.5rem;">
                     <strong>Lugar y Fecha:</strong> <input type="text" class="cp-input"
-                        placeholder="Ej. CDMX, a 01 de Enero 2026" id="cpFecha"> &nbsp;|&nbsp;
+                        style="text-align: right; width: auto; min-width: 250px;"
+                        placeholder="Ej. CDMX, a 01 de Enero 2026" id="cpFecha">
+                </div>
+                <p>
                     <strong>A quien corresponda:</strong>
                 </p>
                 <p style="margin-top: 1.5rem;">
