--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
         <section id="servicios" class="section-padding services">
             <div class="container">
                 <div class="section-title">
-                    <h2 data-i18n="services_title">Nuestros Servicios</h2>
+                    <h2 data-i18n="services_title">Nuestros Servicios de Gestoría Vehicular</h2>
                     <p data-i18n="services_subtitle">Gestión especializada en CDMX, Estado de México, Morelos, Guerrero,
                         Michoacán y Oaxaca.</p>
                     <div class="partners-slider">
@@ -420,7 +420,7 @@
                             <div class="service-header">
                                 <div class="service-icon"><i class="fas fa-car-side"></i></div>
                                 <div>
-                                    <h4>Alta de Placas</h4>
+                                    <h4>Alta de Placas (EdoMex y CDMX)</h4>
                                     <small>Todas las clasificaciones</small>
                                 </div>
                             </div>
@@ -1085,12 +1085,12 @@
         <!-- New Trámites Garantizados Section -->
         <section class="section-padding tramites-section">
             <div class="container">
-                <h2 class="section-heading">TRÁMITES GARANTIZADOS</h2>
+                <h2 class="section-heading">TRÁMITES VEHICULARES GARANTIZADOS</h2>
 
                 <div class="tramites-grid">
                     <!-- Permiso Card -->
                     <div class="tramite-card">
-                        <h3 class="tramite-title">Permiso vehicular</h3>
+                        <h3 class="tramite-title">Permiso de Circulación Provisional</h3>
                         <div class="tramite-image">
                             <img loading="lazy" decoding="async" src="assets/images/permiso_2026.png"
                                 alt="Permiso Provisional Guerrero 2026 Uso Demostrativo" width="300" height="200">
@@ -1112,7 +1112,7 @@
 
                     <!-- Licencia Card -->
                     <div class="tramite-card">
-                        <h3 class="tramite-title">Licencia vehicular</h3>
+                        <h3 class="tramite-title">Licencia de Conducir (Guerrero/EdoMex)</h3>
                         <div class="tramite-image">
                             <img loading="lazy" decoding="async" src="assets/images/licencia_morada.png"
                                 alt="Licencia Permanente Tipo A Morada" width="280" height="180"
@@ -1155,7 +1155,7 @@
             style="background: #0f172a; color: white; text-align: center;">
             <div class="container">
                 <div class="section-title">
-                    <h2 style="color: white;">Cobertura en Todo el EdoMex y CDMX</h2>
+                    <h2 style="color: white;">Cobertura de Gestoría en Todo el EdoMex y CDMX</h2>
                     <p style="color: #94a3b8;">Llegamos a donde otros no. Servicio premium en las siguientes zonas:</p>
                 </div>
                 <div class="coverage-grid"
