--- a/index.html
+++ b/index.html
@@ -140,6 +140,22 @@
             },
             {
               "@type": "Question",
+              "name": "¿Qué placas del Estado de México deben reemplacarse en 2026?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Las placas expedidas en 2021 o años anteriores pierden vigencia. Es obligatorio realizar el reemplacamiento 2026 para evitar multas superiores a $3,000 pesos y la remisión del vehículo al corralón."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "¿Cuánto tarda el trámite de reemplacamiento en el Estado de México?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Nuestro servicio de gestoría agiliza el proceso. Generalmente obtenemos la línea de captura y validación en 24-48 horas, entregando tus nuevas placas y tarjeta de circulación en tu domicilio."
+              }
+            },
+            {
+              "@type": "Question",
               "name": "¿Cuánto tiempo tarda el trámite de licencia en la CDMX?",
               "acceptedAnswer": {
                 "@type": "Answer",
@@ -1086,6 +1102,36 @@
         <section class="section-padding tramites-section">
             <div class="container">
                 <h2 class="section-heading">TRÁMITES VEHICULARES GARANTIZADOS</h2>
+
+                <!-- Reemplacamiento Urgent Card -->
+                <div class="urgent-card">
+                    <div class="urgent-badge">¡URGENTE 2026!</div>
+                    <div class="urgent-image">
+                        <!-- Realistic CSS License Plate -->
+                        <div class="license-plate">
+                            <div class="plate-header">Estado de México</div>
+                            <div class="plate-body">
+                                <span>NEX-2026</span>
+                            </div>
+                            <div class="plate-footer"></div>
+                        </div>
+                    </div>
+                    <div class="urgent-content">
+                        <h3 class="tramite-title" style="color: #691C32; margin-bottom: 0.5rem;">REEMPLACAMIENTO EDOMEX
+                            2026</h3>
+                        <h4 class="tramite-subtitle" style="color: #9d2449; margin-bottom: 1rem;">¿Tus placas son 2021 o
+                            anteriores?</h4>
+                        <p class="tramite-desc" style="color: #4b5563; margin-bottom: 1.5rem;">
+                            Ya no están vigentes. Evita el corralón y multas superiores a <strong>$3,000 MXN</strong>.
+                            Gestionamos tu renovación o alta de placas 100% online y seguro.
+                        </p>
+                        <a href="https://wa.me/525535757364?text=Hola,%20mis%20placas%20son%20anteriores%20a%202021,%20necesito%20reemplacamiento"
+                            class="btn btn-whatsapp-full"
+                            style="background: #691C32; box-shadow: 0 4px 12px rgba(105, 28, 50, 0.4);">
+                            <i class="fas fa-exclamation-triangle"></i> Renovar Mis Placas Ahora
+                        </a>
+                    </div>
+                </div>
 
                 <div class="tramites-grid">
                     <!-- Permiso Card -->
