--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
         gtag('config', 'G-BNJCSQXF11');
     </script>
-    <title>Gestoría Vehicular #1 en EdoMex y CDMX | Placas, Licencias y Altas | Gestor de Autos</title>
+    <title>Gestoría Vehicular CDMX y EdoMex #1 | Placas, Licencias y Altas | Gestor de Autos</title>
     <meta name="description"
-        content="La mejor gestoría vehicular en el Estado de México y Ciudad de México. Expertos en alta de placas, licencias y cambios de propietario en Chalco, Ixtapaluca, Huixquilucan, Interlomas y todo el EdoMex. Trámites 100% online, seguros y rápidos. ¡Evita filas!">
+        content="La mejor gestoría vehicular en CDMX y Estado de México. Expertos en alta de placas, licencias, cambios de propietario y regularización en Chalco, Ixtapaluca, Huixquilucan, Interlomas y Cuautitlán. Trámites 100% online y seguros.">
     <meta name="keywords"
-        content="gestoría vehicular estado de mexico, placas edomex, gestoría vehicular cdmx, trámites vehiculares chalco, gestoría vehicular ixtapaluca, placas huixquilucan, licencias de conducir edomex, cambio de propietario estado de mexico, trámites vehiculares interlomas, gestoría vehicular tlalnepantla, ecatepec">
+        content="gestoría vehicular cdmx, gestoria vehicular estado de mexico, placas edomex, tramites vehiculares chalco, gestoria vehicular ixtapaluca, placas huixquilucan, licencias de conducir edomex, cambio de propietario estado de mexico, tramites vehiculares interlomas, gestoria vehicular tlalnepantla, ecatepec, cuautitlan izcalli, gestor de autos">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
@@ -120,10 +120,11 @@
             "@type": "OfferCatalog",
             "name": "Servicios Vehiculares",
             "itemListElement": [
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Alta de Placas Estado de México", "serviceType": "Legal" } },
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Licencia de Conducir CDMX y EdoMex", "serviceType": "Legal" } },
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Cambio de Propietario EdoMex", "serviceType": "Legal" } },
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Regularización REPUVE y Autos Extranjeros", "serviceType": "Legal" } }
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Alta de Placas Estado de México y CDMX", "serviceType": "Legal" } },
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Licencia de Conducir EdoMex y CDMX", "serviceType": "Legal" } },
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Cambio de Propietario EdoMex y CDMX", "serviceType": "Legal" } },
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Regularización REPUVE y Autos Extranjeros", "serviceType": "Legal" } },
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Gestoría Vehicular Hidalgo y Morelos", "serviceType": "Legal" } }
             ]
           }
         },
@@ -132,10 +133,26 @@
           "mainEntity": [
             {
               "@type": "Question",
+              "name": "¿Cuál es la mejor gestoría vehicular en CDMX?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Gestor de Autos es reconocida como la mejor opción por su rapidez y trámites 100% online en CDMX y EdoMex. Evita filas para placas y licencias."
+              }
+            },
+            {
+              "@type": "Question",
               "name": "¿Cuáles son los requisitos para alta de placas en el Estado de México?",
               "acceptedAnswer": {
                 "@type": "Answer",
-                "text": "Los requisitos básicos incluyen identificación oficial, comprobante de domicilio en EdoMex, factura del vehículo y comprobante de pago de derechos. En Gestor de Autos realizamos este trámite 100% online."
+                "text": "Identificación oficial, factura del vehículo, comprobante de domicilio en EdoMex y pago de derechos. Nosotros lo hacemos sin que salgas de casa."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "¿Cuánto cuesta un gestor vehicular en el Estado de México?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Los costos dependen del tipo de trámite (placas, licencia o cambio de propietario). Ofrecemos cotizaciones transparentes y sin compromiso vía WhatsApp."
               }
             },
             {
@@ -143,31 +160,7 @@
               "name": "¿Qué placas del Estado de México deben reemplacarse en 2026?",
               "acceptedAnswer": {
                 "@type": "Answer",
-                "text": "Las placas expedidas en 2021 o años anteriores pierden vigencia. Es obligatorio realizar el reemplacamiento 2026 para evitar multas superiores a $3,000 pesos y la remisión del vehículo al corralón."
-              }
-            },
-            {
-              "@type": "Question",
-              "name": "¿Cuánto tarda el trámite de reemplacamiento en el Estado de México?",
-              "acceptedAnswer": {
-                "@type": "Answer",
-                "text": "Nuestro servicio de gestoría agiliza el proceso. Generalmente obtenemos la línea de captura y validación en 24-48 horas, entregando tus nuevas placas y tarjeta de circulación en tu domicilio."
-              }
-            },
-            {
-              "@type": "Question",
-              "name": "¿Cuánto tiempo tarda el trámite de licencia en la CDMX?",
-              "acceptedAnswer": {
-                "@type": "Answer",
-                "text": "Con nuestra gestión especializada, procesamos tu licencia de forma rápida, a menudo con respuesta el mismo día o en 24 horas hábiles."
-              }
-            },
-            {
-              "@type": "Question",
-              "name": "¿Realizan trámites vehiculares en Huixquilucan e Interlomas?",
-              "acceptedAnswer": {
-                "@type": "Answer",
-                "text": "Sí, tenemos cobertura total en Huixquilucan, Interlomas, Chalco y todo el área metropolitana, brindando servicio a domicilio o digital."
+                "text": "Todas las placas expedidas en 2021 o años anteriores. El reemplacamiento 2026 es obligatorio para evitar multas y corralón."
               }
             }
           ]
@@ -271,15 +264,15 @@
                 <div class="hero-text">
                     <h1 style="font-size: 2.5rem; line-height: 1.2;">
                         <span style="font-weight: 800; color: white; display: block;"
-                            data-i18n="hero_title_main">Gestoría Vehicular en Estado de México y CDMX</span>
+                            data-i18n="hero_title_main">Gestoría Vehicular CDMX y Estado de México</span>
                         <span
                             style="font-weight: 600; color: #e2e8f0; font-size: 0.6em; display: block; margin-top: 0.5rem; letter-spacing: 1px; text-transform: uppercase;"
                             data-i18n="hero_title_sub">
-                            Chalco · Ixtapaluca · Huixquilucan · Interlomas
+                            Chalco · Ixtapaluca · Huixquilucan · Interlomas · Naucalpan
                         </span>
                         <span
                             style="font-family: 'Yellowtail', cursive; font-size: 1.5em; color: #fbbf24; text-shadow: 2px 2px 0 #000; display: block; margin-top: 1rem;">
-                            Mejor llama a Gestor de Autos
+                            Expertos en Placas y Licencias
                         </span>
                     </h1>
                     <p><strong data-i18n="hero_desc_bold">¿Buscas placas o licencias?</strong> <span
@@ -708,52 +701,71 @@
             <div class="container">
                 <!-- Coverage List -->
                 <div class="seo-block">
-                    <h2 class="seo-title">Cobertura Total en Estado de México y CDMX</h2>
-                    <p class="seo-text">Gestor de Autos es tu mejor opción para trámites vehiculares en la Zona
-                        Metropolitana.
-                        Brindamos servicio especializado de <strong>Alta de Placas, Licencias y Cambios de
-                            Propietario</strong>
-                        en los principales municipios:</p>
-                    <ul class="coverage-list">
-                        <li><i class="fas fa-map-marker-alt"></i> Huixquilucan e Interlomas</li>
-                        <li><i class="fas fa-map-marker-alt"></i> Chalco y Valle de Chalco</li>
-                        <li><i class="fas fa-map-marker-alt"></i> Ixtapaluca</li>
-                        <li><i class="fas fa-map-marker-alt"></i> Ecatepec de Morelos</li>
-                        <li><i class="fas fa-map-marker-alt"></i> Tlalnepantla y Naucalpan</li>
-                        <li><i class="fas fa-map-marker-alt"></i> Nezahualcóyotl</li>
-                        <li><i class="fas fa-map-marker-alt"></i> Texcoco y Chimalhuacán</li>
-                        <li><i class="fas fa-map-marker-alt"></i> Ciudad de México (CDMX)</li>
-                        <li><i class="fas fa-map-marker-alt"></i> Todo Estado de México</li>
+                    <h2 class="seo-title">Gestoría Vehicular en CDMX, EdoMex y Municipios</h2>
+                    <p class="seo-text">En <strong>Gestor de Autos</strong>, ofrecemos cobertura total para tus trámites
+                        vehiculares en la Ciudad de México y el Estado de México. No importa si necesitas un gestor en
+                        Interlomas o placas en Chalco, nosotros nos encargamos de todo.</p>
+
+                    <div class="coverage-grid"
+                        style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 2rem; margin-top: 2rem;">
+                        <div class="coverage-item">
+                            <h4 style="color: #2563eb; margin-bottom: 0.5rem;"><i class="fas fa-map-marker-alt"></i>
+                                Gestoría en Huixquilucan e Interlomas</h4>
+                            <p style="font-size: 0.9rem; color: #64748b;">Servicio premium a domicilio en Interlomas, La
+                                Herradura y Bosque Real. Alta de placas de lujo y licencias rápidas.</p>
+                        </div>
+                        <div class="coverage-item">
+                            <h4 style="color: #2563eb; margin-bottom: 0.5rem;"><i class="fas fa-map-marker-alt"></i>
+                                Trámites en Chalco e Ixtapaluca</h4>
+                            <p style="font-size: 0.9rem; color: #64748b;">Expertos en regularización, reemplacamiento y
+                                cambio de propietario en la zona oriente del EdoMex.</p>
+                        </div>
+                        <div class="coverage-item">
+                            <h4 style="color: #2563eb; margin-bottom: 0.5rem;"><i class="fas fa-map-marker-alt"></i>
+                                Gestoría Vehicular CDMX</h4>
+                            <p style="font-size: 0.9rem; color: #64748b;">Atención en todas las alcaldías: Polanco,
+                                Condesa, Coyoacán y Santa Fe. Licencias permanente (históricas) y renovaciones.</p>
+                        </div>
+                        <div class="coverage-item">
+                            <h4 style="color: #2563eb; margin-bottom: 0.5rem;"><i class="fas fa-map-marker-alt"></i>
+                                Naucalpan y Tlalnepantla</h4>
+                            <p style="font-size: 0.9rem; color: #64748b;">Gestión de placas para Satélite, Echegaray y
+                                zonas industriales. Rapidez garantizada sin filas.</p>
+                        </div>
+                    </div>
+
+                    <ul class="coverage-list" style="margin-top: 2rem;">
+                        <li><i class="fas fa-check-circle"></i> Toluca y Metepec</li>
+                        <li><i class="fas fa-check-circle"></i> Ecatepec de Morelos</li>
+                        <li><i class="fas fa-check-circle"></i> Nezahualcóyotl</li>
+                        <li><i class="fas fa-check-circle"></i> Texcoco y Chimalhuacán</li>
+                        <li><i class="fas fa-check-circle"></i> Morelos (Placas de Cuernavaca)</li>
                     </ul>
                 </div>
 
                 <!-- Expanded FAQ -->
                 <div class="seo-block faq-block">
-                    <h2 class="seo-title">Preguntas Frecuentes sobre Trámites 2026</h2>
+                    <h2 class="seo-title">Servicios de Gestoría: Preguntas Frecuentes 2026</h2>
                     <div class="faq-grid">
                         <div class="faq-item">
-                            <h3>¿Cuál es el costo de las placas del EdoMex en 2026?</h3>
-                            <p>El costo varía según el tipo de vehículo (auto, moto, carga) y si es alta nueva o
-                                renovación. En Gestor de Autos te ofrecemos una <strong>cotización exacta y
-                                    transparente</strong> por WhatsApp.</p>
+                            <h3>¿Cuál es el costo de un gestor vehicular en CDMX?</h3>
+                            <p>El costo de nuestra gestoría es competitivo y depende del trámite. Atendemos altas, bajas
+                                y cambios de propietario con <strong>entrega garantizada</strong>.</p>
                         </div>
                         <div class="faq-item">
-                            <h3>¿Realizan trámites urgentes sin cita?</h3>
-                            <p>¡Sí! Nosotros gestionamos todo el proceso y <strong>te generamos la cita</strong>. Tú
-                                solo acudes al módulo a recoger tus placas, sin filas de espera ni estrés. Iniciamos tu
-                                trámite de forma <strong>100% online</strong>.</p>
+                            <h3>¿Cómo saber si mi auto necesita reemplacamiento?</h3>
+                            <p>Si tus placas fueron expedidas en 2021 o antes, debes reemplacar en 2026. Nosotros
+                                realizamos tu <strong>reemplacamiento EdoMex online</strong> rápido y seguro.</p>
                         </div>
                         <div class="faq-item">
-                            <h3>¿Necesito ir a dejar mis documentos originales?</h3>
-                            <p><strong>No.</strong> Solo requerimos copias escaneadas (no fotos, no apps de celular) de
-                                tu factura de origen y documentos vigentes. Esto garantiza la agilidad y corrección de
-                                tu trámite. Evita riesgos y coyotes con mala reputación.</p>
+                            <h3>¿Atienden urgencias de placas en Interlomas?</h3>
+                            <p>Sí, brindamos atención prioritaria en <strong>Interlomas y Huixquilucan</strong>. Podemos
+                                gestionar tus placas y entregarlas en tu domicilio en tiempo récord.</p>
                         </div>
                         <div class="faq-item">
-                            <h3>¿Es seguro tramitar mi licencia o placas por internet?</h3>
-                            <p>Totalmente. En Gestor de Autos garantizamos la <strong>legalidad y autenticidad</strong>
-                                de todos los documentos. Entregamos QR verificable y puedes consultar tus trámites en
-                                los portales oficiales de control vehicular.</p>
+                            <h3>¿Es seguro enviar mis documentos por WhatsApp?</h3>
+                            <p>Absolutamente. En <strong>Gestor de Autos</strong> manejamos tu información con estricta
+                                confidencialidad. Somos profesionales con cientos de casos de éxito verificables.</p>
                         </div>
                     </div>
                 </div>
